// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "./Pus003Packet.proto";


package pusGroundModel.protobuf;

message Pus003DiagnosticPacket {
extensions 2 to 102;

  optional pusGroundModel.protobuf.Pus003Packet pus003Packet = 1;
}
